# Chess-Video-Maker

./: CMakeLists.txt  ChessAutoMaker.cpp  ChessAutoMaker.hpp  ChessDialog.cpp  ChessDialog.hpp  ChessParser.cpp  ChessParser.hpp  ChessRenderImage.cpp  ChessRenderImage.hpp  ChessWindow.cpp  ChessWindow.hpp  CsvReader.cpp  CsvReader.hpp  DetectEvent.cpp  DetectEvent.hpp  IDECode.cpp  IDECode.hpp  JsonCommand.cpp  JsonCommand.hpp  MultiAccess.hpp  OpenMusic.cpp  OpenMusic.hpp  README.md  Ressources.cpp  Ressources.hpp  SaveMusic.cpp  SaveMusic.hpp  StockFishUCI.cpp  StockFishUCI.hpp  SyntaxJson.cpp  SyntaxJson.hpp  camera.cpp  camera.hpp  default.cpp  default.hpp  getpuzzle.cpp  getpuzzle.hpp  main.cpp
BPMLib/: FindTempo_standalone  FindTempo_standalone.cpp  FindTempo_standalone.hpp  MiniBpm.cpp  MiniBpm.h  polyfit.h
BPMLib/Polyfit/: PolyfitBoost.hpp
Doc/: Doxyfile
Doc/html/: ChessAutoMaker_8hpp_source.html  ChessDialog_8hpp_source.html  annotated.html  (+209 more)
Effect/: GreenBackground.cpp  GreenBackground.hpp  effect.cpp  effect.hpp  voice.cpp  voice.hpp
Event/: Check.cpp  Check.hpp  Mistake.cpp  Mistake.hpp  event.cpp  event.hpp  multipleAttack.cpp  multipleAttack.hpp  rating_move.cpp  rating_move.hpp  solution.cpp  solution.hpp  textGeneration.cpp  textGeneration.hpp  videoGeneration.cpp  videoGeneration.hpp
Ressources/: ressources.json  ressources.yaml
config/: config.json  config.json.old2  config.json.old3
data/: 2new.json  3new.json  main_config_json_save.json  new.json  new3.json  pjt1.json  ui.json
ffmpeg/: ffmpeg.cpp  ffmpeg.hpp
qt/: mainMenu.ui
(+94 files in other folders)
